# bgfx-skeleton

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: BGFX.cmake  FindBGFX.cmake  FindBIMG.cmake  FindBX.cmake
